Clarify top heading comment and fix HTML structure
Updated comment for clarity and ensured proper HTML structure.

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 </head>
 <body>
 
-    <!-- Top heading -->
+    <!-- Top heading (one sentence) -->
     <div class="top-heading">
         ARE ANTIFA SCUM ACTIVE IN <b>YOUR</b> AREA?
     </div>
