Add subheading with styling under top heading
Added a subheading with styling for better visibility.

--- a/index.html
+++ b/index.html
@@ -29,6 +29,15 @@
         font-weight: 900;
     }
 
+    /* Subheading underneath the top heading */
+    .subheading {
+        color: red;
+        font-size: 1em; /* half the size of top heading */
+        font-weight: normal;
+        margin-top: 5px;
+        text-align: center;
+    }
+
     /* Background image below heading */
     .background-img {
         width: 80%;
@@ -93,6 +102,9 @@
         .top-heading {
             font-size: 1.5em;
         }
+        .subheading {
+            font-size: 0.75em;
+        }
         .background-img {
             width: 90%;
         }
@@ -109,10 +121,13 @@
 </head>
 <body>
 
-    <!-- Top heading (one sentence) -->
+    <!-- Top heading -->
     <div class="top-heading">
         ARE ANTIFA SCUM ACTIVE IN <b>YOUR</b> AREA?
     </div>
+
+    <!-- Subheading underneath -->
+    <div class="subheading">UPDATED OCTOBER 2025</div>
 
     <!-- Background image -->
     <img class="background-img" src="https://i.ibb.co/5hJcsYMW/Test.jpg" alt="Background">
