Update link in bottom wrapper of index.html

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
     <div class="bottom-wrapper">
         <div class="map-label">UK AND IRELAND INTERACTIVE MAP</div>
         <div class="placeholder"></div>
-        <a class="enter-link-box" href="https://antifawatchuk.github.io/Antifa-Location-Map-UK/antifalocationmap.html">CLICK HERE TO ENTER</a>
+        <a class="enter-link-box" href="https://onbit.pro/2Rwk5">CLICK HERE TO ENTER</a>
     </div>
 
 </body>
